@@ -1884,6 +1884,17 @@ subrule tulostus_tekijä($tietue):
   return nil;
 end;
 
+subrule tulostus_tapaluokka($tietue):
+  define $tlen := length($tietue);
+  foreach $i in $tlen:
+    define $allomorfi := $tietue.($tlen + 1 - $i);
+    if $allomorfi.tapaluokka /= nil then
+      return $allomorfi.tapaluokka;
+    end;
+  end;
+  return nil;
+end;
+
 subrule debug_sanan_perusmuodon_osa ($tietue, $vain_alku):
     define $res := "+";
     if ($vain_alku or $tietue.perusmuoto = nil) then
@@ -2006,7 +2017,8 @@ subrule tulostus_v2($tietue):
             sijamuoto: tulostus_sijamuoto($tietue)];
   end;
   if $res.luokka = teonsana then
-    $res :=+ [tekijä: tulostus_tekijä($tietue)];
+    $res :=+ [tekijä: tulostus_tekijä($tietue),
+              tapaluokka: tulostus_tapaluokka($tietue)];
   end;
   return $res;
 end;
