@@ -1,3 +1,6 @@
+2009-12-31 Harri Pitkänen <hatapitk@iki.fi>
+	* Support verb mood in morphological analysis.
+
 2009-12-27 Harri Pitkänen <hatapitk@iki.fi>
 	* No longer return "none" as a value for "SIJAMUOTO".
 
